<resources>
    <string name="app_name">BooksFeed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Find your books</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbook">Search Book</string>
    <string name="home">Books Recommendation Fragment</string>
    <string name="title_book_recommendation">Book Recommendation</string>
    <string name="title_search_book">Search Book</string>
    <string name="title_isbn">ISBN</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_quotes">Quotes</string>
    <string name="notification_error_ssl_cert_invalid">Database Permission!</string>
    <string name="app">BooksFeed</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="send_email_text">Share</string>
    <string name="mail_intent_chooser_text">Send mail...</string>
    <string name="no_email_client_error">There are no email clients installed.</string>
    <string name="copy_text">Copy to clipboard</string>
    <string name="clipboard_copy_successful_message">Copied to clipboard.</string>
    <string name="clickscan">CLICK TO SCAN</string>
</resources>
